@@ -3,6 +3,7 @@
 *
 
 - Topology-based event correlation improved
+- Network discovery improved
 - Management console:
 	- "Area" option implemented on line charts
 	- Multiple DCIs can be combined on one graph on "Performance" tab
@@ -13,7 +14,7 @@
 	- Select all/unselect all in alarms list
 	- Multipliers for graphs and last values: binary (power of two) and decimal (power of ten)
 - API for creating embedded application agents
-- Fixed issues: #23, #47, #49, #162, #163, #177, #186, #188, #189, #192, #196
+- Fixed issues: #23, #47, #49, #162, #163, #177, #178, #186, #188, #189, #192, #196
 
 
 *
